--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/custom.css">
     
-    <title>Send Email</title>
+    <title>Form Validation</title>
   </head>
   <body>
 
