--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/custom.css">
     
-    <title>Form Validation</title>
+    <title>Send Email</title>
   </head>
   <body>
 
@@ -44,7 +44,7 @@
                         Sign up
                     </header>
                     
-                    <form id="email-form" action="#" class="col s10 offset-s1">
+                    <form id="formValidation" action="#" class="col s10 offset-s1">
                         <div class="row">
                             <div class="input-field col s12">
                                 <input id="name" type="text">
@@ -64,11 +64,6 @@
                             <div class="input-field col s12">
                                 <input id="address" type="text">
                                 <label for="address">Address:</label>
-                            </div>
-
-                            <div class="input-field col s12">
-                                <input id="country" type="text">
-                                <label for="country">Country:</label>
                             </div>
 
                         </div>
